--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="./js/task-1.js"></script>
     <script src="./js/task-2.js"></script>
     <script src="./js/task-dz.js"></script>
+    <script src="./js/task-callback.js"></script>
 </body>
 
 </html>
